Fixed html and css code of the "banner"

--- a/index.html
+++ b/index.html
@@ -68,11 +68,10 @@
                         <a class="banner-link" href="#">
                             Узнать подробнее
                         </a>
-                        <a id="btnDown" class="btn-down" href="#schedule"></a>
                     </div>
                     <div class="banner-bg">
-                        <!--<div class="banner-bg-right"></div>
-                        <div class="banner-bg-left"></div>-->
+                        <!--<div class="banner-bg-left"></div>
+                        <div class="banner-bg-right"></div>-->
                         <img src="files/@1x/girl.png" alt="Девушка">
                     </div>
                 </div>
