Fixed characteristics of links in the header and banner. Add timetable

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <nav class="header-item_nav">
                         <ul class="header-nav">
                             <li>
-                                <a href="#">
+                                <a href="#event-box">
                                 Мероприятия
                                 </a>
                             </li>
@@ -68,6 +68,7 @@
                         <a class="banner-link" href="#">
                             Узнать подробнее
                         </a>
+                        <a class="banner-btn-scroll" href="#event-box"></a>
                     </div>
                     <div class="banner-bg">
                         <!--<div class="banner-bg-left"></div>
@@ -79,7 +80,7 @@
         </div>
         <div class="event">
             <div class="container">
-                <div class="event-box">
+                <div id="event-box" class="event-box">
                     <h3 class="event-title">
                         Ближайшие события
                     </h3>
@@ -112,8 +113,75 @@
                 </div>
             </div>
         </div>
-        <div class="schedule">
-            <div class="container"></div>
+        <div class="timetable">
+            <div class="container">
+                <div class="timetable-title">
+                    <h3 class="timetable-name">Расписание тренировок</h3>
+                    <h3 class="timetable-date">22 - 28 июня</h3>
+                </div>
+                <div class="timetable-grid">
+                    <div class="timetable-grid-box">
+                        <p class="timetable-grid-date">22 июня, 10:00</p>
+                        <div class="timetable-grid-info">
+                            <img src="icons/body.svg" alt="Функциональный тренинг">
+                            <div class="timetable-grid-text">
+                                <p class="timetable-grid-title">Функциональный тренинг</p>
+                                <p class="timetable-grid-desc"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="timetable-grid-box">
+                        <p class="timetable-grid-date">23 июня, 10:00</p>
+                        <div class="timetable-grid-info">
+                            <img src="icons/jump.svg" alt="Силовой микс">
+                            <div class="timetable-grid-text">
+                                <p class="timetable-grid-title">Силовой микс</p>
+                                <p class="timetable-grid-desc">Упражнения помогут создать красивый рельеф и прийти в спортивную форму.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="timetable-grid-box">
+                        <p class="timetable-grid-date">24 июня, 10:00</p>
+                        <div class="timetable-grid-info">
+                            <img src="icons/bottle.svg" alt="Body sculpt">
+                            <div class="timetable-grid-text">
+                                <p class="timetable-grid-title">Body sculpt</p>
+                                <p class="timetable-grid-desc"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="timetable-grid-box">
+                        <p class="timetable-grid-date">25 июня, 11:00</p>
+                        <div class="timetable-grid-info">
+                            <img src="icons/heart.svg" alt="Дыхательные практики">
+                            <div class="timetable-grid-text">
+                                <p class="timetable-grid-title">Дыхательные практики</p>
+                                <p class="timetable-grid-desc"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="timetable-grid-box">
+                        <p class="timetable-grid-date">26 июня, 11:00</p>
+                        <div class="timetable-grid-info">
+                            <img src="icons/dumbbell.svg" alt="L.A.B.">
+                            <div class="timetable-grid-text">
+                                <p class="timetable-grid-title">L.A.B.</p>
+                                <p class="timetable-grid-desc"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="timetable-grid-box">
+                        <p class="timetable-grid-date">27 июня, 10:00</p>
+                        <div class="timetable-grid-info">
+                            <img src="icons/weight.svg" alt="Комплексная разминка">
+                            <div class="timetable-grid-text">
+                                <p class="timetable-grid-title">Комплексная разминка</p>
+                                <p class="timetable-grid-desc">Подготовка тела перед физической нагрузкой.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="mailing">
             <div class="container"></div>
