Add gradient blocks in the banner

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                         <a class="banner-btn-scroll" href="#event-box"></a>
                     </div>
                     <div class="banner-bg">
-                        <!--<div class="banner-bg-left"></div>
-                        <div class="banner-bg-right"></div>-->
+                        <div class="banner-bg-left"></div>
+                        <div class="banner-bg-right"></div>
                         <img src="files/@1x/girl.png" alt="Девушка">
                     </div>
                 </div>
