The event block was corrected

--- a/index.html
+++ b/index.html
@@ -85,29 +85,35 @@
                         Ближайшие события
                     </h3>
                     <div class="event-grid">
-                        <div class="event-grid_item event-grid_item1">
-                            <p class="event-grid_date">29.06 - 4.07</p>
-                            <p class="event-grid_title">Марафон выносливости</p>
-                            <button class="event-grid_btn" type="button">
-                                <span>участвовать</span>
-                            </button>
-                            <p class="event-grid_type">марафон</p>
+                        <div class="event-grid-item event-grid-item1">
+                            <div class="event-grid-box">
+                                <p class="event-grid-date">29.06 - 4.07</p>
+                                <p class="event-grid-title">Марафон выносливости</p>
+                                <button class="event-grid-btn" type="button">
+                                    <span>участвовать</span>
+                                </button>
+                                <p class="event-grid-type">марафон</p>
+                            </div>
                         </div>
-                        <div class="event-grid_item event-grid_item2">
-                            <p class="event-grid_date">9.07</p>
-                            <p class="event-grid_title">Как стать тренером?</p>
-                            <button class="event-grid_btn" type="button">
-                                <span>участвовать</span>
-                            </button>
-                            <p class="event-grid_type">вебинар</p>
+                        <div class="event-grid-item event-grid-item2">
+                            <div class="event-grid-box">
+                                <p class="event-grid-date">9.07</p>
+                                <p class="event-grid-title">Как стать тренером?</p>
+                                <button class="event-grid-btn" type="button">
+                                    <span>участвовать</span>
+                                </button>
+                                <p class="event-grid-type">вебинар</p>
+                            </div>
                         </div>
-                        <div class="event-grid_item event-grid_item3">
-                            <p class="event-grid_date">15.07</p>
-                            <p class="event-grid_title">Йога, как стиль жизни</p>
-                            <button class="event-grid_btn" type="button">
-                                <span>участвовать</span>
-                            </button>
-                            <p class="event-grid_type">вебинар</p>
+                        <div class="event-grid-item event-grid-item3">
+                            <div class="event-grid-box">
+                                <p class="event-grid-date">15.07</p>
+                                <p class="event-grid-title">Йога, как стиль жизни</p>
+                                <button class="event-grid-btn" type="button">
+                                    <span>участвовать</span>
+                                </button>
+                                <p class="event-grid-type">вебинар</p>
+                            </div>
                         </div>
                     </div>
                 </div>
